refactor(common): 重构 TextModifier 并添加 AppStore
-重命名 textModifier.ets 为 TextModifier.ets
- 添加 AppStore 类用于管理应用状态
- 更新 TextModifier 类，支持深度参数
- 调整主页布局和样式
- 更新路由配置

--- a/products/phone/oh-package.json5
+++ b/products/phone/oh-package.json5
@@ -10,6 +10,7 @@
     "explore": "file:../../features/explore",
     "collection": "file:../../features/collection",
     "profile": "file:../../features/profile",
-    "styles": "file:../../commons/styles"
+    "styles": "file:../../commons/styles",
+    "utils": "file:../../commons/utils"
   }
 }
