--- a/oh-package.json5
+++ b/oh-package.json5
@@ -3,7 +3,8 @@
   "description": "Please describe the basic information.",
   "dependencies": {
     "@pura/harmony-utils": "^1.3.2",
-    "@hzw/zrouter": "^1.4.1"
+    "@hzw/zrouter": "^1.4.1",
+    "@ohos/axios": "^2.2.6"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
