--- a/build-profile.json5
+++ b/build-profile.json5
@@ -67,31 +67,35 @@
     },
     {
       "name": "home",
-      "srcPath": "./features/home",
+      "srcPath": "./features/home"
     },
     {
       "name": "explore",
-      "srcPath": "./features/explore",
+      "srcPath": "./features/explore"
     },
     {
       "name": "collection",
-      "srcPath": "./features/collection",
+      "srcPath": "./features/collection"
     },
     {
       "name": "profile",
-      "srcPath": "./features/profile",
+      "srcPath": "./features/profile"
     },
     {
       "name": "components",
-      "srcPath": "./commons/components",
+      "srcPath": "./commons/components"
     },
     {
       "name": "utils",
-      "srcPath": "./commons/utils",
+      "srcPath": "./commons/utils"
     },
     {
       "name": "styles",
-      "srcPath": "./commons/styles",
+      "srcPath": "./commons/styles"
+    },
+    {
+      "name": "apis",
+      "srcPath": "./commons/apis"
     }
   ]
 }
