--- a/oh-package.json5
+++ b/oh-package.json5
@@ -4,7 +4,7 @@
   "dependencies": {
     "@pura/harmony-utils": "^1.3.2",
     "@hzw/zrouter": "^1.4.1",
-    "@ohos/axios": "^2.2.6"
+    "@yunkss/ef_rcp": "^1.0.8"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
