refactor: 更新项目依赖并添加 RCP 相关功能
- 移除了 oh-package.json5 中的 @yunkss/ef_rcp 依赖
- 新增 RCPClient 类和相关配置文件
- 添加 BuildProfile 类用于构建配置

--- a/oh-package.json5
+++ b/oh-package.json5
@@ -3,8 +3,7 @@
   "description": "Please describe the basic information.",
   "dependencies": {
     "@pura/harmony-utils": "^1.3.2",
-    "@hzw/zrouter": "^1.4.1",
-    "@yunkss/ef_rcp": "^1.0.8"
+    "@hzw/zrouter": "^1.4.1"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
