feat: 添加轮播图功能并重构首页
- 新增 Banner 组件，实现轮播图功能
- 重构 HomePage 组件，集成轮播图
- 新增 APIs 目录，包含 Banner接口和请求方法
- 更新 RCPClient 类，增加请求拦截器和错误处理
-调整项目结构，更新依赖关系

--- a/features/home/oh-package.json5
+++ b/features/home/oh-package.json5
@@ -8,6 +8,7 @@
   "dependencies": {
     "utils": "file:../../commons/utils",
     "styles": "file:../../commons/styles",
-    "components": "file:../../commons/components"
+    "components": "file:../../commons/components",
+    "apis": "file:../../commons/apis"
   }
 }
