--- a/build-profile.json5
+++ b/build-profile.json5
@@ -31,7 +31,7 @@
     "products": [
       {
         "name": "default",
-        "signingConfig": "default2",
+        "signingConfig": "default",
         "targetSdkVersion": "5.0.5(17)",
         "compatibleSdkVersion": "5.0.5(17)",
         "runtimeOS": "HarmonyOS",
