feat(home): 添加 skeleton 组件并优化首页加载逻辑
- 新增 Skeleton 组件用于展示加载中的骨架屏
- 在 AlbumNewest、Banner 和 TopSong 组件中集成 Skeleton 组件
- 优化 HomePage 组件的结构，支持加载状态显示
- 更新样式文件，添加新的颜色资源

--- a/products/phone/src/main/module.json5
+++ b/products/phone/src/main/module.json5
@@ -20,7 +20,7 @@
         "icon": "$media:app_icon",
         "label": "$string:EntryAbility_label",
         "startWindowIcon": "$media:start_icon",
-        "startWindowBackground": "$color:base_color",
+        "startWindowBackground": "$color:base",
         "exported": true,
         "skills": [
           {
