feat: 新增 BlurStatusBar 和 NavDestinationTitle 组件
- 在 commons/components 中添加了 BlurStatusBar 和 NavDestinationTitle 两个新组件- 更新了 HomePage 和 TopSongPage，集成了新组件
-调整了 BuildProfile 的定义
- 更新了相关项目的依赖

--- a/commons/components/oh-package.json5
+++ b/commons/components/oh-package.json5
@@ -6,6 +6,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "styles": "file:../styles"
+    "styles": "file:../styles",
+    "utils": "file:../utils"
   }
 }
