--- a/oh-package.json5
+++ b/oh-package.json5
@@ -4,7 +4,8 @@
   "dependencies": {
     "@pura/harmony-utils": "^1.3.2",
     "@hzw/zrouter": "^1.5.0",
-    "@ohos/imageknife": "^3.2.6"
+    "@ohos/imageknife": "^3.2.6",
+    "dayjs": "^1.11.13"
   },
   "devDependencies": {
     "@ohos/hypium": "1.0.21",
