--- a/commons/components/oh-package.json5
+++ b/commons/components/oh-package.json5
@@ -7,6 +7,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "styles": "file:../styles",
-    "utils": "file:../utils"
+    "utils": "file:../utils",
+    "apis": "file:../apis"
   }
 }
